agregar pequeñas notas en index

--- a/HTML Y CCS/index.html
+++ b/HTML Y CCS/index.html
@@ -4,7 +4,7 @@
         <title>Mi primera pagina</title> 
     </head>
     <body>
-        <img src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/es-mx/production/es-mx/static/logo-800-47024e2aeaaa8651c172ba883264dd43.png"100 />
+       
 
     </body> 
 
@@ -60,3 +60,16 @@
     </select>
 </fieldset>
 </form> -->
+
+<!-- <img src="https://placekitten.com/200/300">
+<a href="https://www.google.com">ir a google</a> -->
+
+<!-- <ul>
+    <li>elemento 1</li>
+    <li>elemento 2</li>
+    <li>elemento 3</li>
+</ul>
+ul = para lista ordenada
+ol= para lista no ordenada
+
+-->
