--- a/HTML Y CCS/index.html
+++ b/HTML Y CCS/index.html
@@ -3,11 +3,7 @@
     <head>
         <title>Mi primera pagina</title> 
     </head>
-    <body>
-       
-
-    </body> 
-
+    
 </html>
 
 
@@ -73,3 +69,28 @@ ul = para lista ordenada
 ol= para lista no ordenada
 
 -->
+
+<!-- <body>
+    <table>
+        <thead>
+            <tr>
+                <th>mes</th>
+                <th>ahorro</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>enero</td>
+                <td>febrero</td>
+            </tr>
+            <tr>
+                <td>1000$</td>
+                <td>2000$</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <td>suma total</td>
+            <td>3000$</td>
+        </tfoot>
+    </table>
+</body> -->
