agregando mas ccs

--- a/HTML Y CCS/CCS/CSS.html
+++ b/HTML Y CCS/CCS/CSS.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet"  href="main.css" "type="text/css"">
     </head>
     <body>
-        <p>este es un parrafo</p>
-        <span>este es un span</span>
+    <div class="caja">Hola mundo!</div>
     </body>
 </html>
