ya deberia tagear :v aqui van mas practicas

--- a/HTML Y CCS/CCS/CSS.html
+++ b/HTML Y CCS/CCS/CSS.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CCS</title>
-        <link rel="stylesheet"  href="main.css" "type="text/css"">
+        <link rel="stylesheet"  href="main.css" type="text/css">
     </head>
     <body>
     <div class="caja">Hola mundo!</div>
