--- a/HTML Y CCS/index.html
+++ b/HTML Y CCS/index.html
@@ -65,8 +65,8 @@
     <li>elemento 2</li>
     <li>elemento 3</li>
 </ul>
-ul = para lista ordenada
-ol= para lista no ordenada
+ul = para lista no ordenada
+ol= para lista ordenada
 
 -->
 
