--- a/HTML Y CCS/CCS/EjercicioDeCabecera.html
+++ b/HTML Y CCS/CCS/EjercicioDeCabecera.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Cabecera de practica</title>
-        <link rel="stylesheet" href="MainCabecera.css" "type="text/css"">
+        <link rel="stylesheet" href="MainCabecera.css" type="text/css">
     </head>
     <body>
         
